# 0xv7

./: .env  .env.example  .env.production  .gitignore  0001-feat-add-NFT-Gallery-fix-Sultan-only-validation-add-.patch  ACTIVATE_EXISTING_NETWORK.sh  ACTIVATE_PRODUCTION_NOW.sh  ADD_P2P_NETWORKING.sh  ADD_PERSISTENCE.sh  ADD_RPC_ENDPOINTS.sh  ANNOUNCEMENT.md  ARCHITECTURE.md  BENCHMARK_MILLION_TPS.sh  BLOCKCHAIN_ROADMAP.sh  BLOCKCHAIN_STATS.sh  BRIDGE_FEE_IMPLEMENTATION.md  BRIDGE_STATUS_DASHBOARD.sh  BUILD_AND_RUN_NODE.sh  BUILD_AND_RUN_SULTAN.sh  BUILD_AND_TEST_NOW.sh  BUILD_COSMOS_CHAIN.sh  BUILD_FEATURE_2_DATABASE.sh  BUILD_FEATURE_4_VALIDATOR_RECRUITMENT.sh  BUILD_MAINNET_PRODUCTION.sh  BUILD_ORGANIZED_PROJECT.sh  BUILD_PRODUCTION_SULTAN.sh  BUILD_REAL_VALIDATORS_NOW.sh  BUILD_STATUS.md  BUILD_SULTAN_MAINNET.sh  BUILD_WORKING_MAINNET.sh  CHAIN_SUMMARY.sh  CHECK_ACTUAL_CODE.sh  CHECK_AND_FIX.sh  CHECK_AND_FIX_BUILD.sh  CHECK_BUILD_STATUS.sh  CHECK_MAINNET_PROGRESS.sh  CHECK_NETWORK.sh  CHECK_ORGANIZED_STATUS.sh  CHECK_REAL_STATUS.sh  CHECK_SERVICES.sh  (+351 more)
_archive/legacy-dirs/contracts-cosmwasm-legacy/cw20-token/: Cargo.toml
_archive/legacy-dirs/contracts-cosmwasm-legacy/defi-amm/: Cargo.toml  README.md
_archive/legacy-dirs/contracts-cosmwasm-legacy/defi-amm/src/: lib.rs
_archive/legacy-dirs/sultan-blockchain-final/: Cargo.toml
_archive/legacy-dirs/sultan-blockchain-final/src/: main.rs
_archive/legacy-dirs/sultan-unified/: Cargo.toml  METAMASK_SETUP.md  PHANTOM_TELEGRAM_SETUP.md  README.md  SDK_RPC_PRODUCTION_AUDIT.md  WALLET_STRATEGY.md
_archive/legacy-dirs/sultan-unified/examples/: governance.rs  staking.rs
_archive/legacy-dirs/sultan-unified/legacy/: integrate_p2p.rs  main_updated.rs  rpc_methods_day56.rs  sdk_cosmos_wrapper.rs  sultan_minimal.rs
_archive/legacy-dirs/sultan-unified/legacy/cosmos-attempt/sovereign-chain/sovereign/: INTEGRATION_REPORT.md  Makefile  genesis.json  go.sum  readme.md
_archive/legacy-dirs/sultan-unified/legacy/go-attempt/working-chain/: Dockerfile  go.mod  main.go  transaction_handler.go
_archive/legacy-dirs/sultan-unified/legacy/rust-attempts/mainnet-implementation/: Makefile  README.md  launch.sh
_archive/legacy-dirs/sultan-unified/legacy/rust-attempts/mainnet-implementation/api/: package-lock.json  package.json
_archive/legacy-dirs/sultan-unified/legacy/rust-attempts/mainnet-implementation/core/: Cargo.toml
_archive/legacy-dirs/sultan-unified/legacy/rust-attempts/node-implementation/: Cargo.toml.backup_day78  FIX_AND_LAUNCH_TODAY.sh  FIX_BUILD_AND_LAUNCH.sh  MAINNET_READINESS_CHECK.sh  MAINNET_ROADMAP.md  TODAY_COMPLETION_PLAN.sh  VERIFY_SULTAN_STATUS.sh  docker-compose.mainnet.yml  test_all_endpoints.sh
_archive/legacy-dirs/sultan-unified/legacy/rust-attempts/node-implementation/src/: blockchain.rs  (+20 more)
_archive/legacy-dirs/sultan-unified/src/: blockchain.rs  config.rs  lib.rs  main.rs  p2p.rs  persistence.rs  rewards.rs  sdk.rs  sdk_error.rs  storage.rs
_archive/legacy-dirs/sultan-unified/tests/: sdk_advanced.rs  sdk_integration.rs
contracts/cw20-sultan/: Cargo.toml
contracts/cw20-sultan/src/: lib.rs
contracts/cw721-nft/: Cargo.toml
node/: Cargo.toml  build.rs
node/proto/: use sultan::chain_service_server::ChainS.rs
node/src/: -- run via: docker exec -i scylla cqlsh .sql  ALTER KEYSPACE sultan WITH replication =.js  account.rs  blockchain.rs  consensus.rs  database.rs  grpc_client.rs  grpc_service.rs  lib.rs  migrations.rs  p2p_node.rs  quantum.rs  rpc_server.rs  safety.rs  scylla_db.rs  sdk.rs  staking.rs  telegram_bot.rs  transaction.rs  transaction_validator.rs  types.rs
node/src/testing/: load_testing.rs
smart-contracts/sultan-counter/: Cargo.toml
sultan-core/: Cargo.toml  README.md  STANDALONE_NODE.md  chain_config.json  start-sultan-node.sh  test-node.sh
sultan-core/benches/: performance.rs
sultan-core/src/: block_sync.rs  blockchain.rs  bridge_fees.rs  bridge_integration.rs  config.rs  consensus.rs  database.rs  economics.rs  governance.rs  lib.rs  main.rs  native_dex.rs  p2p.rs  sharded_blockchain.rs  sharded_blockchain_production.rs  sharding.rs  sharding_production.rs  staking.rs  storage.rs  token_factory.rs  transaction_validator.rs  types.rs  wasm_runtime.rs
sultan-core/sultan-data/blocks/: IDENTITY  LOG  LOG.old.1763919328463648  MANIFEST-000010
sultan-core/tests/: integration_tests.rs  shard_expansion_tests.rs  sharding_integration.rs  sharding_tests.rs  stress_tests.rs
sultan-cosmos-bridge/: Cargo.toml  FFI_BRIDGE_COMPLETE.md  PHASE2_COMPLETE.md  README.md  TESTING.md  build.rs  check_build_status.sh  go.mod
sultan-cosmos-bridge/bridge/: bridge.go
sultan-cosmos-bridge/go/: integration_test.go
sultan-cosmos-bridge/go/bridge/: bridge.go  bridge_test.go
sultan-cosmos-bridge/go/types/: types.go
sultan-cosmos-bridge/include/: sultan_bridge.h
sultan-cosmos-bridge/src/: abci.rs  error.rs  ffi.rs  lib.rs  state.rs  types.rs
sultan-cosmos-bridge/types/: types.go
sultan-interop/: Cargo.toml  build.rs
sultan-interop/bitcoin-service/src/: main.rs
sultan-interop/ethereum-service/src/: main.rs
sultan-interop/src/: bitcoin.rs  eth_bridge.rs  lib.rs  main.rs  sol_bridge.rs  ton_bridge.rs  zk_bridge.rs
sultan-interop/src/ethereum-service/: main.rs
sultan-interop/src/solana-service/: main.rs
sultan-interop/src/ton-service/: main.rs
sultan-interop/src/zk_proofs/: mod.rs
sultan-unified/legacy/rust-attempts/node-implementation/: Cargo.toml  Dockerfile.production  LAUNCH_TESTNET_NOW.sh  TODAY_COMPLETION_PLAN.sh  VERIFY_SULTAN_STATUS.sh  build.rs
sultan-unified/legacy/rust-attempts/node-implementation/proto/: consensus.proto
sultan-unified/legacy/rust-attempts/node-implementation/src/: economics.rs  lib.rs.backup_day78  multi_consensus.rs  rewards.rs  sdk.rs  telegram_bot.rs
sultan-unified/legacy/rust-attempts/node-implementation/src/archived_sdks/: sdk.backup.rs
sultan-unified/legacy/rust-attempts/node-implementation/src/tests/: hello_world.test.rs
sultan_mainnet/: Cargo.toml
sultan_mainnet/src/: main.rs
telegram-bot/: Cargo.toml
telegram-bot/src/: main.rs
(+1208 files in other folders)
