[workspace]
members = [
    "sultan-core",
    "sultan-cosmos-bridge",
    "sultan-interop",
    "sultan_mainnet",
]
exclude = [
    "contracts",
    "_archive",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

# Production release profile - maximum optimization
[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Full Link-Time Optimization across all crates
codegen-units = 1       # Single codegen unit for best optimization
panic = "abort"         # Abort on panic (smaller binary, no unwinding)
strip = true            # Strip symbols for smaller binary
overflow-checks = false # Disable overflow checks for performance
