[workspace]
members = [
    "sultan-core",
    "sultan-cosmos-bridge",
    "sultan-interop",
]
exclude = [
    "contracts",
    "_archive",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

# Production release profile - fast builds for development
[profile.release]
opt-level = 3           # Maximum optimization
lto = false             # Disabled for faster builds
codegen-units = 16      # Parallel codegen for faster builds
panic = "abort"         # Abort on panic (smaller binary, no unwinding)
strip = true            # Strip symbols for smaller binary
overflow-checks = false # Disable overflow checks for performance
