[package]
name = "sultan-core"
version = "0.1.0"
edition = "2021"
authors = ["Sultan Chain Team"]
description = "Sultan Layer 1 Blockchain Core"
license = "MIT"

[lib]
name = "sultan_core"
path = "src/lib.rs"
crate-type = ["lib", "staticlib", "cdylib"]  # Support FFI

[[bin]]
name = "sultan-node"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify"] }

# Storage
rocksdb = "0.21"
sled = "0.34"
lru = "0.12"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha3 = "0.10"
sha2 = "0.10"
pqcrypto-dilithium = "0.5"
ed25519-dalek = "2.0"
hex = "0.4"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
warp = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
