[package]
name = "sultan-cosmos-bridge"
version = "0.1.0"
edition = "2021"
authors = ["Sultan Chain Team"]
description = "FFI Bridge between Sultan Core (Rust) and Cosmos SDK (Go)"
license = "MIT"

[lib]
name = "sultan_cosmos_bridge"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]  # Required for FFI

[dependencies]
# Sultan Core
sultan-core = { path = "../sultan-core" }

# FFI utilities
libc = "0.2"

# Serialization for cross-language data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Threading
parking_lot = "0.12"

# Memory management
once_cell = "1.19"

[build-dependencies]
cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false  # Keep symbols for debugging FFI
