[package]
name = "sultan-interop"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = "1.4"
bitcoin = { version = "0.31", features = ["rand-std"] }

anyhow = "1.0"
axum = "0.7"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
prost = "0.13.1"
tonic = { version = "0.12", features = ["transport", "prost", "tls", "tls-webpki-roots"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha3 = "0.10"
hex = "0.4"
secp256k1 = { version = "0.28", features = ["rand"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "bitcoin-service"
path = "bitcoin-service/src/main.rs"

[[bin]]
name = "ethereum-service"
path = "src/ethereum-service/main.rs"

[[bin]]
name = "solana-service"
path = "src/solana-service/main.rs"

[[bin]]
name = "ton-service"
path = "src/ton-service/main.rs"
