[package]
name = "sultan-mainnet"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
