[package]
name = "sultan-node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"

# Cryptography
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"

# Networking
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "identify", "kad", "mdns"] }
jsonrpc-http-server = "18.0"

# Database
rocksdb = "0.21"

# Utilities
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

[features]
default = []

[[bin]]
name = "sultan_node"
path = "src/bin/sultan_node.rs"
