[package]
name = "sultan-core"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "test_node"
path = "src/bin/test_node.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"  # Added rand dependency

# Web server
axum = "0.7"
tower = "0.4"

# Optional dependencies
scylla = { version = "0.12", optional = true }

[features]
default = []
with-scylla = ["scylla"]

[dev-dependencies]
tracing-subscriber = "0.3.20"
